[package]
name = "http-client-async"
version = "0.1.0-dev"
edition = "2024"

[lib]
name = "vss_rust_http_client_async"
path = "source/rust/lib.rs"
crate-type = ["staticlib"]

[dependencies]
reqwest = { version = "0.13.2", features = ["rustls"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }

vss-rust-interop = { workspace = true }